[package]
name = "p3p"
version = "0.1.0"
authors = ["Matthieu Pizenberg <matthieu.pizenberg@gmail.com>"]
edition = "2018"

description = "Camera pose estimation given 3D points and corresponding pixel coordinates"
documentation = "https://docs.rs/p3p/"
homepage = "https://github.com/rust-photogrammetry/p3p"
repository = "https://github.com/rust-photogrammetry/p3p"
readme = "README.md"
keywords = ["p3p", "pnp", "slam", "vision"] # up to 5 keywords
categories = ["algorithms", "science", "science::robotics"] # up to 5 categories, cf crates.io/category_slugs
license = "MPL-2.0" # SPDX license

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dependencies]
cv = { package = "cv-core", version = "0.2.0" }
arraymap = "0.1.1"

[dev-dependencies]
approx = "0.3"
arrsac = "0.2.0"
rand = { version = "0.7.2", features = ["small_rng"] }
quickcheck = "0.9.0"
quickcheck_macros = "0.8.0"
itertools = "0.8.2"
arraymap = "0.1.1"
